Replaced content with "Toto je výchozí styl navigace. Umožňuje uživateli jednoduché ovládání zobrazení a nevyžaduje použití kláves na klávesnici, s výjimkou výběru více položek."

--- a/wiki/cs/Mouse_navigation.html
+++ b/wiki/cs/Mouse_navigation.html
@@ -106,135 +106,8 @@
 <p><span id="CAD_navigation"></span>
 </p>
 <h3><span class="mw-headline" id="CAD_navigace">CAD navigace</span></h3>
-<div class="mw-translate-fuzzy">
-<h3><span id="CAD_Navigace_.28default.29"></span><span class="mw-headline" id="CAD_Navigace_(default)">CAD Navigace (default)</span></h3>
-<p>Je to defaultn&iacute; naviga&#269;n&iacute; styl, kter&yacute; umo&#382;&#328;uje u&#382;ivateli jednoduchou kontrolu nad pohledem a nepo&#382;aduje pou&#382;&iacute;v&aacute;n&iacute; kl&aacute;vesnice, krom&#283; v&iacute;cen&aacute;sobn&eacute;ho v&yacute;b&#283;ru.
+<p>Toto je v&yacute;choz&iacute; styl navigace. Umo&#382;&#328;uje u&#382;ivateli jednoduch&eacute; ovl&aacute;d&aacute;n&iacute; zobrazen&iacute; a nevy&#382;aduje pou&#382;it&iacute; kl&aacute;ves na kl&aacute;vesnici, s v&yacute;jimkou v&yacute;b&#283;ru v&iacute;ce polo&#382;ek.
 </p>
-<table border="1" class="mousemodel">
-<tbody><tr>
-<th align="center" width="20%">V&yacute;b&#283;r
-</th>
-<th align="center" width="20%">Pan
-</th>
-<th align="center" width="20%">Zoom
-</th>
-<th align="center" width="20%">Ot&aacute;&#269;en&iacute; pohledem
-</th>
-<th align="center" width="20%">Ot&aacute;&#269;en&iacute; pohledem
-<p>Alternativn&iacute; Methoda
-</p>
-</th></tr>
-<tr align="center">
-<td><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Hand_cursor.png&amp;filetimestamp=20240917104542&amp;.html" class="mw-file-description"><img src="../File/Hand_cursor.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="24" data-file-height="24"></a></span>
-</td>
-<td><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Pan_cursor.png&amp;filetimestamp=20240917200627&amp;.html" class="mw-file-description"><img src="../File/Pan_cursor.png" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="16" data-file-height="16"></a></span>
-</td>
-<td><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Zoom_cursor.png&amp;filetimestamp=20240917104519&amp;.html" class="mw-file-description"><img src="../File/Zoom_cursor.png" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="16" data-file-height="16"></a></span>
-</td>
-<td><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Rotate_cursor.png&amp;filetimestamp=20240917104455&amp;.html" class="mw-file-description"><img src="../File/Rotate_cursor.png" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="16" data-file-height="16"></a></span>
-</td>
-<td><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Rotate_cursor.png&amp;filetimestamp=20240917104455&amp;.html" class="mw-file-description"><img src="../File/Rotate_cursor.png" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="16" data-file-height="16"></a></span>
-</td></tr>
-<tr align="center">
-<td><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Select-mouse.svg&amp;filetimestamp=20111203221921&amp;.html" class="mw-file-description" title="to Select"><img alt="to Select" src="../File/Select-mouse.svg" decoding="async" width="70" height="100" class="mw-file-element" data-file-width="70" data-file-height="100"></a></span>
-</td>
-<td><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Pan-mouse.svg&amp;filetimestamp=20111203221536&amp;.html" class="mw-file-description" title="to Pan"><img alt="to Pan" src="../File/Pan-mouse.svg" decoding="async" width="70" height="100" class="mw-file-element" data-file-width="70" data-file-height="100"></a></span>
-</td>
-<td><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Zoom-mouse.svg&amp;filetimestamp=20111203224155&amp;.html" class="mw-file-description" title="to Zoom in or out"><img alt="to Zoom in or out" src="../File/Zoom-mouse.svg" decoding="async" width="70" height="100" class="mw-file-element" data-file-width="70" data-file-height="100"></a></span>
-</td>
-<td><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Rotate-mouse.svg&amp;filetimestamp=20111203221615&amp;.html" class="mw-file-description" title="to Rotate view"><img alt="to Rotate view" src="../File/Rotate-mouse.svg" decoding="async" width="70" height="100" class="mw-file-element" data-file-width="70" data-file-height="100"></a></span>
-</td>
-<td><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Rotate-mouse-MMB%2BRMB.svg&amp;filetimestamp=20131019230732&amp;.html" class="mw-file-description" title="to Rotate view"><img alt="to Rotate view" src="../File/Rotate-mouse-MMB%2BRMB.svg" decoding="async" width="70" height="100" class="mw-file-element" data-file-width="70" data-file-height="100"></a></span>
-</td></tr>
-<tr valign="top">
-<td>Stiskn&#283;te lev&eacute; tla&#269;&iacute;tko my&scaron;i nad objektem, kter&yacute; chcete vybrat. Podr&#382;en&iacute; kl&aacute;vesy CTRL umo&#382;&#328;uje sou&#269;asn&yacute; v&yacute;b&#283;r v&iacute;ce objekt&#367;.
-</td>
-<td>Klikn&#283;te na st&#345;edn&iacute; tla&#269;&iacute;tko a pohybujte objektem kolem pan
-</td>
-<td>Kole&#269;ko my&scaron;i pou&#382;&iacute;vejte pro zoomov&aacute;n&iacute; (zv&#283;t&scaron;en&iacute; nebo zmen&scaron;en&iacute; m&#283;&#345;&iacute;tka).
-</td>
-<td>Klikn&#283;te na prost&#345;edn&iacute; tla&#269;&iacute;tko, podr&#382;te je stisknut&eacute; a potom klikn&#283;te na lev&eacute; tla&#269;&iacute;tko my&scaron;i a t&aacute;hn&#283;te my&scaron;&iacute; v po&#382;adovan&eacute;m sm&#283;ru. Um&iacute;st&#283;n&iacute; kurzovu v dob&#283; stisknut&iacute; prost&#345;edn&iacute;ho tla&#269;&iacute;tka ur&#269;uje st&#345;ed rotace. Ot&aacute;&#269;en&iacute; funguje jako rotace m&iacute;&#269;e, kter&yacute; se ot&aacute;&#269;&iacute; podle sv&eacute;ho st&#345;edu. Pokud jsou tla&#269;&iacute;tka uvoln&#283;na p&#345;ed zastaven&iacute;m pohybu my&scaron;i, objekt pokra&#269;uje v <a href="../cs/Spinning.html" class="mw-redirect" title="Spinning/cs">ot&aacute;&#269;en&iacute;</a>, pokud je to umo&#382;n&#283;no. Dvojklik prost&#345;edn&iacute;m tla&#269;&iacute;tkem nastav&iacute; nov&yacute; st&#345;ed ot&aacute;&#269;en&iacute;.
-</td>
-<td>Klikn&#283;te na prost&#345;edn&iacute; tla&#269;&iacute;tko, podr&#382;te je stisknut&eacute; a potom klikn&#283;te na prav&eacute; tla&#269;&iacute;tko my&scaron;i a t&aacute;hn&#283;te my&scaron;&iacute; v po&#382;adovan&eacute;m sm&#283;ru. Tato metoda pracuje stejn&#283; jako d&#345;&iacute;ve popsan&aacute; metoda se stiskem prost&#345;edn&iacute;ho tla&#269;&iacute;tka a lev&eacute;ho tla&#269;&iacute;tka, s t&iacute;m rozd&iacute;lem, &#382;e prost&#345;edn&iacute; tla&#269;&iacute;tko m&#367;&#382;e b&yacute;t uvoln&#283;no hned po stisknut&iacute; prav&eacute;ho tla&#269;&iacute;tka. Pro u&#382;ivatele, kte&#345;&iacute; pou&#382;&iacute;vaj&iacute; my&scaron; pravou rukou m&#367;&#382;e b&yacute;t tento zp&#367;osob ot&aacute;&#269;en&iacute; p&#345;&iacute;jemn&#283;j&scaron;&iacute; ne&#382; p&#345;edchoz&iacute; metoda.
-</td></tr></tbody></table>
-<table class="mousemodel" style="border-style:solid; border-width:1px; border-color:#aaaaaa; padding:1px; border-spacing:18px 0px; width:100%;">
-<tbody><tr>
-<th style="width:20%; background: #ededff; padding:2px 2px;">Select
-</th>
-<th style="width:20%; background: #ededff; padding:2px 2px;">Zoom
-</th>
-<th style="width:20%; background: #ededff; padding:2px 2px;">Rotate view<br>First method
-</th>
-<th style="width:20%; background: #ededff; padding:2px 2px;">Rotate view<br>Alternate method
-</th>
-<th style="width:20%; background: #ededff; padding:2px 2px;">Pan
-</th></tr>
-<tr style="text-align:center;">
-<td><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Hand_cursor.png&amp;filetimestamp=20240917104542&amp;.html" class="mw-file-description"><img src="../File/Hand_cursor.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="24" data-file-height="24"></a></span>
-</td>
-<td><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Zoom_cursor.png&amp;filetimestamp=20240917104519&amp;.html" class="mw-file-description"><img src="../File/Zoom_cursor.png" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="16" data-file-height="16"></a></span>
-</td>
-<td><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Rotate_cursor.png&amp;filetimestamp=20240917104455&amp;.html" class="mw-file-description"><img src="../File/Rotate_cursor.png" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="16" data-file-height="16"></a></span>
-</td>
-<td><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Rotate_cursor.png&amp;filetimestamp=20240917104455&amp;.html" class="mw-file-description"><img src="../File/Rotate_cursor.png" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="16" data-file-height="16"></a></span>
-</td>
-<td><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Pan_cursor.png&amp;filetimestamp=20240917200627&amp;.html" class="mw-file-description"><img src="../File/Pan_cursor.png" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="16" data-file-height="16"></a></span>
-</td></tr>
-<tr style="text-align:center;">
-<td><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Mouse_LMB.svg&amp;filetimestamp=20181210182920&amp;.html" class="mw-file-description"><img src="../File/Mouse_LMB.svg" decoding="async" width="70" height="100" class="mw-file-element" data-file-width="70" data-file-height="100"></a></span>
-</td>
-<td><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Mouse_MMB_rotate.svg&amp;filetimestamp=20181210192821&amp;.html" class="mw-file-description"><img src="../File/Mouse_MMB_rotate.svg" decoding="async" width="70" height="100" class="mw-file-element" data-file-width="70" data-file-height="100"></a></span>
-</td>
-<td><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Mouse_MMB%2BLMB_hold.svg&amp;filetimestamp=20181210192927&amp;.html" class="mw-file-description"><img src="../File/Mouse_MMB%2BLMB_hold.svg" decoding="async" width="70" height="100" class="mw-file-element" data-file-width="70" data-file-height="100"></a></span>
-</td>
-<td><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Mouse_MMB%2BRMB_hold.svg&amp;filetimestamp=20181210192958&amp;.html" class="mw-file-description"><img src="../File/Mouse_MMB%2BRMB_hold.svg" decoding="async" width="70" height="100" class="mw-file-element" data-file-width="70" data-file-height="100"></a></span>
-</td>
-<td><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Mouse_MMB_hold.svg&amp;filetimestamp=20181210192909&amp;.html" class="mw-file-description"><img src="../File/Mouse_MMB_hold.svg" decoding="async" width="70" height="100" class="mw-file-element" data-file-width="70" data-file-height="100"></a></span>
-</td></tr>
-<tr style="vertical-align:top; background:#efefef;">
-<td>Press the left mouse button over an object you want to select.
-<p>Holding down <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Ctrl</span> allows the selection of multiple objects.
-</p>
-</td>
-<td>Use the mouse wheel to zoom in and out.
-<p>Clicking the middle mouse button re-centers the view on the location of the cursor.
-</p>
-</td>
-<td>Hold the middle mouse button, then press and hold the left mouse button, then move the pointer.
-<p>The cursor location when the middle mouse button is pressed determines the center of rotation. Rotation works like spinning a ball which rotates around its center. If the buttons are released before you stop the mouse motion, the view continues <a href="../Spinning.html" class="mw-redirect" title="Spinning">spinning</a>, if this is enabled.
-</p><p>A double click with the middle mouse button sets a new center of rotation.
-</p>
-</td>
-<td>Hold the middle mouse button, then press and hold the right mouse button, then move the pointer.
-<p>With this method the middle mouse button may be released after the right mouse button is held pressed.
-</p><p>Users who use the mouse with their right hand may find this method easier than the first method.
-</p>
-</td>
-<td>Hold the middle mouse button, then move the pointer.
-</td></tr>
-<tr style="text-align:center;">
-<td>
-</td>
-<td><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Ctrl</span>+<span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Shift</span>+<span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Mouse_RMB.svg&amp;filetimestamp=20181210061951&amp;.html" class="mw-file-description"><img src="../File/Mouse_RMB.svg" decoding="async" width="75" height="107" class="mw-file-element" data-file-width="75" data-file-height="107"></a></span>
-</td>
-<td><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Shift</span>+<span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Mouse_RMB.svg&amp;filetimestamp=20181210061951&amp;.html" class="mw-file-description"><img src="../File/Mouse_RMB.svg" decoding="async" width="75" height="107" class="mw-file-element" data-file-width="75" data-file-height="107"></a></span>
-</td>
-<td>
-</td>
-<td><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Ctrl</span>+<span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Mouse_RMB.svg&amp;filetimestamp=20181210061951&amp;.html" class="mw-file-description"><img src="../File/Mouse_RMB.svg" decoding="async" width="75" height="107" class="mw-file-element" data-file-width="75" data-file-height="107"></a></span>
-</td></tr>
-<tr style="vertical-align:top;">
-<td>
-</td>
-<td style="background:#efffef;">Zoom mode: hold the <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Ctrl</span> and <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Shift</span> keys, press the right mouse button once, then move the pointer. <span style="font-size:small;"><a href="../Release_notes_0.17.html" title="Release notes 0.17">introduced in 0.17</a></span>
-</td>
-<td style="background:#efffef;">Rotate mode: hold the <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Shift</span> key, press the right mouse button once, then move the pointer. <span style="font-size:small;"><a href="../Release_notes_0.17.html" title="Release notes 0.17">introduced in 0.17</a></span>
-</td>
-<td>
-</td>
-<td style="background:#efffef;">Pan mode: hold the <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Ctrl</span> key, press the right mouse button once, then move the pointer. <span style="font-size:small;"><a href="../Release_notes_0.17.html" title="Release notes 0.17">introduced in 0.17</a></span>
-</td></tr></tbody></table>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <table class="mousemodel" style="border-style:solid; border-width:1px; border-color:#aaaaaa; padding:1px; border-spacing:18px 0px; width:100%;">
 <tbody><tr>
@@ -1333,15 +1206,15 @@ In <a href="../Sketcher_Workbench.html" title="Sketcher Workbench">Sketcher</a> 
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111194747
+Cached time: 20260111195026
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.377 seconds
-Real time usage: 1.137 seconds
-Preprocessor visited node count: 1797/1000000
-Post&#8208;expand include size: 89232/2097152 bytes
-Template argument size: 33278/2097152 bytes
+CPU time usage: 0.323 seconds
+Real time usage: 0.519 seconds
+Preprocessor visited node count: 1683/1000000
+Post&#8208;expand include size: 79089/2097152 bytes
+Template argument size: 28890/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -1349,19 +1222,19 @@ Unstrip post&#8208;expand size: 3888/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  124.626      1 -total
- 13.56%   16.895      1 Template:Blender_Navigation
-  8.52%   10.616      1 Template:Gesture_Navigation
-  7.85%    9.777      8 Template:ASCII
-  7.09%    8.836      1 Template:MayaGesture_Navigation
-  6.97%    8.689      2 Template:CAD_Navigation
-  5.99%    7.467      1 Template:OpenCascade_Navigation
-  5.55%    6.919      1 Template:Userdocnavi/cs
-  5.31%    6.617      1 Template:OpenSCAD_Navigation
-  4.25%    5.296      1 Template:CAD_Navigation/cs
+100.00%   96.587      1 -total
+ 12.47%   12.046      8 Template:ASCII
+  8.07%    7.790      1 Template:Gesture_Navigation
+  8.04%    7.767      1 Template:Userdocnavi/cs
+  6.27%    6.053      1 Template:MayaGesture_Navigation
+  6.04%    5.829      1 Template:TinkerCAD_Navigation
+  5.92%    5.715      1 Template:CAD_Navigation
+  5.50%    5.315     78 Template:KEY
+  5.10%    4.923      1 Template:Inventor_Navigation/cs
+  4.52%    4.364      1 Template:Navigation_menu_2
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111194746 and revision id 1735900. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111195025 and revision id 1735908. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
