Updated page TechDraw AxoLengthDimension/de

--- a/wiki/de/TechDraw_AxoLengthDimension.html
+++ b/wiki/de/TechDraw_AxoLengthDimension.html
@@ -1,5 +1,5 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw AxoLengthDimension/de</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="de" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+AxoLengthDimension&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="de" dir="ltr">Deutsch</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="de" dir="ltr">Deutsch</span></li>
 <li><a href="../TechDraw_AxoLengthDimension.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw AxoLengthDimension (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/TechDraw_AxoLengthDimension.html" class="mw-pt-progress mw-pt-progress--med" title="TechDraw Cote axonom&eacute;trique (57% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../it/TechDraw_AxoLengthDimension.html" class="mw-pt-progress mw-pt-progress--med" title="TechDraw&#720; Quota lineare assonometrica (57% translated)" lang="it" dir="ltr">italiano</a></li>
@@ -80,11 +80,8 @@
 </p><p><span id="Change_properties"></span>
 </p>
 <h3><span class="mw-headline" id="Eigenschaften_anpassen">Eigenschaften anpassen</span></h3>
-<div class="mw-translate-fuzzy">
-<p>Um die Eigenschaften eines Ma&szlig;es (Dimension-Objekt) zu &auml;ndern, wird es in der Zeichnung oder in der <a href="../de/Tree_view.html" class="mw-redirect" title="Tree view/de">Baumansicht</a> doppelt angeklickt. Dadurch wird der Dialog <a href="../de/TechDraw_LengthDimension.html#Dialog_Ma%C3%9Feintrag" title="TechDraw LengthDimension/de">Ma&szlig;eintrag</a> ge&ouml;ffnet.
-</p>
-</div>
-<p><br>
+<p>Um die Eigenschaften eines Ma&szlig;es (Dimension-Objekt) zu &auml;ndern, wird es in der Zeichnung oder in der <a href="../de/Tree_View.html" title="Tree View/de">Baumansicht</a> doppelt angeklickt. Dadurch wird das Aufgaben-Fenster <a href="../de/TechDraw_LengthDimension.html#Dimension_task_panel" title="TechDraw LengthDimension/de">Ma&szlig;eintrag</a> ge&ouml;ffnet.
+</p><p><br>
 </p>
 <div class="docnav">
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_Balloon.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../de/TechDraw_Balloon.html" title="TechDraw Balloon/de">Hinweisfeld</a></div>
@@ -128,35 +125,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111195007
+Cached time: 20260111195052
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.086 seconds
-Real time usage: 0.122 seconds
-Preprocessor visited node count: 308/1000000
+CPU time usage: 0.076 seconds
+Real time usage: 0.128 seconds
+Preprocessor visited node count: 307/1000000
 Post&#8208;expand include size: 27275/2097152 bytes
 Template argument size: 10792/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1743/5000000 bytes
+Unstrip post&#8208;expand size: 1747/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   20.708      1 -total
- 39.00%    8.076      1 Template:TechDraw_Tools_navi/de
- 16.97%    3.514      2 Template:Navigation_menu_2
- 12.01%    2.487      2 Template:Docnav/de
- 11.76%    2.435      1 Template:GuiCommand/de
-  8.51%    1.763      1 Template:Userdocnavi/de
-  6.98%    1.446      1 Template:Caption
-  6.76%    1.400      1 Template:VersionPlus/de
-  6.18%    1.280      1 Template:Button
-  5.60%    1.160      1 Template:MenuCommand
+100.00%   26.610      1 -total
+ 31.09%    8.274      1 Template:TechDraw_Tools_navi/de
+ 17.43%    4.639      2 Template:Navigation_menu_2
+ 12.70%    3.378      1 Template:GuiCommand/de
+ 12.11%    3.222      2 Template:Docnav/de
+ 10.83%    2.883      1 Template:VersionPlus/de
+ 10.50%    2.795      1 Template:Userdocnavi/de
+  7.04%    1.872      1 Template:Caption
+  6.53%    1.737      1 Template:Button
+  5.75%    1.529      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:310874-0!canonical and timestamp 20260111195006 and revision id 1735906. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:310874-0!canonical and timestamp 20260111195052 and revision id 1735910. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
