Updated page TechDraw 2LineCenterLine/de

--- a/wiki/de/TechDraw_2LineCenterLine.html
+++ b/wiki/de/TechDraw_2LineCenterLine.html
@@ -3,7 +3,7 @@
 <li><a href="../TechDraw_2LineCenterLine.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw 2LineCenterLine (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/TechDraw_2LineCenterLine.html" class="mw-pt-progress mw-pt-progress--high" title="TechDraw Ligne centrale entre 2 lignes (80% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../it/TechDraw_2LineCenterLine.html" class="mw-pt-progress mw-pt-progress--high" title="TechDraw: Linea centrale tra 2 linee (80% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><a href="../pl/TechDraw_2LineCenterLine.html" class="mw-pt-progress mw-pt-progress--high" title="Rysunek Techniczny: Dodaj o&#347; pomi&#281;dzy dwiema liniami (80% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="../pl/TechDraw_2LineCenterLine.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Dodaj o&#347; pomi&#281;dzy dwiema liniami (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ru/TechDraw_2LineCenterLine.html" class="mw-pt-progress mw-pt-progress--med" title='TechDraw "&#1044;&#1086;&#1073;&#1072;&#1074;&#1080;&#1090;&#1100; &#1086;&#1089;&#1077;&#1074;&#1091;&#1102; &#1083;&#1080;&#1085;&#1080;&#1102; &#1084;&#1077;&#1078;&#1076;&#1091; 2 &#1083;&#1080;&#1085;&#1080;&#1103;&#1084;&#1080;" (27% translated)' lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../ko/TechDraw_2LineCenterLine.html" class="mw-pt-progress mw-pt-progress--high" title="&#44592;&#49696;&#46020;&#47732; 2&#49440;&#44036; &#51473;&#49900;&#49440; (80% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
 <div class="docnav">
@@ -13,7 +13,6 @@
     <div><a href="../de/TechDraw_Workbench.html" title="TechDraw Workbench/de">TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
 </div>
-<div class="mw-translate-fuzzy">
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 1em">
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
@@ -24,7 +23,7 @@
 <th class="ctOdd">Men&uuml;eintrag
 </th></tr>
 <tr>
-<td class="ctEven">TechDraw &rarr; Linien hinzuf&uuml;gen &rarr; Mittellinie zwischen 2 Linien hinzuf&uuml;gen
+<td class="ctEven">TechDraw &rarr; Linien hinzuf&uuml;gen &rarr; Mittellinie zwischen 2 Linien
 </td></tr>
 <tr>
 <th class="ctOdd">Arbeitsbereich
@@ -53,7 +52,6 @@
 <tr>
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr></tbody></table>
-</div>
 <p><span id="Description"></span>
 </p>
 <h2><span class="mw-headline" id="Beschreibung">Beschreibung</span></h2>
@@ -129,34 +127,34 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111145910
+Cached time: 20260111195222
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.090 seconds
-Real time usage: 0.126 seconds
-Preprocessor visited node count: 317/1000000
-Post&#8208;expand include size: 27951/2097152 bytes
-Template argument size: 11187/2097152 bytes
+CPU time usage: 0.082 seconds
+Real time usage: 0.313 seconds
+Preprocessor visited node count: 316/1000000
+Post&#8208;expand include size: 27927/2097152 bytes
+Template argument size: 11163/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1705/5000000 bytes
+Unstrip post&#8208;expand size: 1710/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   23.036      1 -total
- 29.51%    6.797      1 Template:TechDraw_Tools_navi/de
- 17.52%    4.035      2 Template:Navigation_menu_2
- 13.88%    3.197      2 Template:Docnav/de
- 13.21%    3.044      1 Template:GuiCommand/de
- 10.52%    2.424      1 Template:MenuCommand
- 10.02%    2.309      2 Template:Button
-  9.72%    2.239      1 Template:Caption
-  9.48%    2.183      1 Template:Userdocnavi/de
+100.00%   62.253      1 -total
+ 37.39%   23.279      1 Template:TechDraw_Tools_navi/de
+ 14.60%    9.087      2 Template:Docnav/de
+ 13.93%    8.669      1 Template:GuiCommand/de
+ 13.20%    8.216      2 Template:Navigation_menu_2
+ 12.86%    8.007      1 Template:Caption
+  7.83%    4.872      1 Template:MenuCommand
+  7.73%    4.813      2 Template:Button
+  4.35%    2.708      1 Template:Userdocnavi/de
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:177750-0!canonical and timestamp 20260111145910 and revision id 1734472. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:177750-0!canonical and timestamp 20260111195222 and revision id 1735912. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
