--- a/wiki/cs/Mouse_navigation.html
+++ b/wiki/cs/Mouse_navigation.html
@@ -119,8 +119,7 @@
 <th style="width:20%; background: #ededff; padding:2px 2px;">Rotace pohledu<br>Alternativn&iacute; metoda
 </th>
 <th style="width:20%; background: #ededff; padding:2px 2px;">Posun pohledu
-<div lang="en" dir="ltr" class="mw-content-ltr">
-</div></th></tr>
+</th></tr>
 <tr style="text-align:center;">
 <td><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Hand_cursor.png&amp;filetimestamp=20240917104542&amp;.html" class="mw-file-description"><img src="../File/Hand_cursor.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="24" data-file-height="24"></a></span>
 </td>
@@ -184,11 +183,9 @@
 <td>
 </td>
 <td><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Ctrl</span>+<span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Shift</span>
-
 <div lang="en" dir="ltr" class="mw-content-ltr">+<span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Mouse_RMB.svg&amp;filetimestamp=20181210061951&amp;.html" class="mw-file-description"><img src="../File/Mouse_RMB.svg" decoding="async" width="75" height="107" class="mw-file-element" data-file-width="75" data-file-height="107"></a></span>
 </div></td>
 <td><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Shift</span>
-
 <div lang="en" dir="ltr" class="mw-content-ltr">+<span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Mouse_RMB.svg&amp;filetimestamp=20181210061951&amp;.html" class="mw-file-description"><img src="../File/Mouse_RMB.svg" decoding="async" width="75" height="107" class="mw-file-element" data-file-width="75" data-file-height="107"></a></span>
 </div></td>
 <td>
@@ -1204,15 +1201,15 @@ In <a href="../Sketcher_Workbench.html" title="Sketcher Workbench">Sketcher</a> 
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111195226
+Cached time: 20260111195234
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.370 seconds
-Real time usage: 0.585 seconds
-Preprocessor visited node count: 1682/1000000
-Post&#8208;expand include size: 79104/2097152 bytes
-Template argument size: 28905/2097152 bytes
+CPU time usage: 0.300 seconds
+Real time usage: 0.463 seconds
+Preprocessor visited node count: 1681/1000000
+Post&#8208;expand include size: 79040/2097152 bytes
+Template argument size: 28841/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -1220,19 +1217,19 @@ Unstrip post&#8208;expand size: 3888/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   91.075      1 -total
- 13.93%   12.691      1 Template:SolidWorks_Navigation
- 10.85%    9.883      1 Template:Userdocnavi/cs
-  9.11%    8.299      8 Template:ASCII
-  6.36%    5.789      1 Template:TinkerCAD_Navigation
-  5.92%    5.389      1 Template:SiemensNX_Navigation
-  5.54%    5.043      1 Template:OpenSCAD_Navigation
-  4.88%    4.447      1 Template:Gesture_Navigation
-  4.46%    4.059      1 Template:Touchpad_Navigation
-  4.06%    3.695     78 Template:KEY
+100.00%   70.162      1 -total
+ 17.67%   12.398      8 Template:ASCII
+  6.77%    4.751      1 Template:Userdocnavi/cs
+  6.61%    4.635      1 Template:Blender_Navigation
+  5.71%    4.005     78 Template:KEY
+  5.13%    3.598      1 Template:MayaGesture_Navigation
+  4.38%    3.074      1 Template:OpenCascade_Navigation
+  4.29%    3.011      1 Template:Gesture_Navigation
+  4.27%    2.996      1 Template:OpenSCAD_Navigation
+  4.13%    2.898      1 Template:Touchpad_Navigation
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111195225 and revision id 1735914. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111195234 and revision id 1735916. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
