--- a/wiki/cs/Mouse_navigation.html
+++ b/wiki/cs/Mouse_navigation.html
@@ -143,8 +143,7 @@
 <td><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Mouse_MMB_hold.svg&amp;filetimestamp=20181210192909&amp;.html" class="mw-file-description"><img src="../File/Mouse_MMB_hold.svg" decoding="async" width="70" height="100" class="mw-file-element" data-file-width="70" data-file-height="100"></a></span>
 </td></tr>
 <tr style="vertical-align:top; background:#efefef;">
-<td>Press the left mouse button over an object you want to select.
-
+<td>Stiskn&#283;te lev&eacute; tla&#269;&iacute;tko my&scaron;i nad objektem, kter&yacute; chcete vybrat.
 <div lang="en" dir="ltr" class="mw-content-ltr">
 </div></td>
 <td>Use the mouse wheel to zoom in and out.
@@ -182,12 +181,10 @@
 <tr style="text-align:center;">
 <td>
 </td>
-<td><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Ctrl</span>+<span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Shift</span>
-<div lang="en" dir="ltr" class="mw-content-ltr">+<span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Mouse_RMB.svg&amp;filetimestamp=20181210061951&amp;.html" class="mw-file-description"><img src="../File/Mouse_RMB.svg" decoding="async" width="75" height="107" class="mw-file-element" data-file-width="75" data-file-height="107"></a></span>
-</div></td>
-<td><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Shift</span>
-<div lang="en" dir="ltr" class="mw-content-ltr">+<span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Mouse_RMB.svg&amp;filetimestamp=20181210061951&amp;.html" class="mw-file-description"><img src="../File/Mouse_RMB.svg" decoding="async" width="75" height="107" class="mw-file-element" data-file-width="75" data-file-height="107"></a></span>
-</div></td>
+<td><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Ctrl</span>+<span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Shift</span>+<span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Mouse_RMB.svg&amp;filetimestamp=20181210061951&amp;.html" class="mw-file-description"><img src="../File/Mouse_RMB.svg" decoding="async" width="75" height="107" class="mw-file-element" data-file-width="75" data-file-height="107"></a></span>
+</td>
+<td><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Shift</span>+<span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Mouse_RMB.svg&amp;filetimestamp=20181210061951&amp;.html" class="mw-file-description"><img src="../File/Mouse_RMB.svg" decoding="async" width="75" height="107" class="mw-file-element" data-file-width="75" data-file-height="107"></a></span>
+</td>
 <td>
 </td>
 <td><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Ctrl</span>+<span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Mouse_RMB.svg&amp;filetimestamp=20181210061951&amp;.html" class="mw-file-description"><img src="../File/Mouse_RMB.svg" decoding="async" width="75" height="107" class="mw-file-element" data-file-width="75" data-file-height="107"></a></span>
@@ -1201,15 +1198,15 @@ In <a href="../Sketcher_Workbench.html" title="Sketcher Workbench">Sketcher</a> 
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111195234
+Cached time: 20260111195304
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.300 seconds
-Real time usage: 0.463 seconds
-Preprocessor visited node count: 1681/1000000
-Post&#8208;expand include size: 79040/2097152 bytes
-Template argument size: 28841/2097152 bytes
+CPU time usage: 0.310 seconds
+Real time usage: 0.433 seconds
+Preprocessor visited node count: 1679/1000000
+Post&#8208;expand include size: 78940/2097152 bytes
+Template argument size: 28741/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -1217,19 +1214,19 @@ Unstrip post&#8208;expand size: 3888/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   70.162      1 -total
- 17.67%   12.398      8 Template:ASCII
-  6.77%    4.751      1 Template:Userdocnavi/cs
-  6.61%    4.635      1 Template:Blender_Navigation
-  5.71%    4.005     78 Template:KEY
-  5.13%    3.598      1 Template:MayaGesture_Navigation
-  4.38%    3.074      1 Template:OpenCascade_Navigation
-  4.29%    3.011      1 Template:Gesture_Navigation
-  4.27%    2.996      1 Template:OpenSCAD_Navigation
-  4.13%    2.898      1 Template:Touchpad_Navigation
+100.00%   72.764      1 -total
+ 10.63%    7.734      8 Template:ASCII
+ 10.05%    7.312      1 Template:TOCright
+  7.46%    5.428      1 Template:Userdocnavi/cs
+  5.49%    3.994      1 Template:CAD_Navigation
+  5.37%    3.911     78 Template:KEY
+  5.19%    3.775      1 Template:OpenSCAD_Navigation
+  4.81%    3.503      1 Template:Inventor_Navigation/cs
+  4.67%    3.397      1 Template:OpenCascade_Navigation
+  4.63%    3.366      1 Template:Gesture_Navigation
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111195234 and revision id 1735916. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111195304 and revision id 1735918. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
