--- a/wiki/de/TechDraw_2LineCenterLine.html
+++ b/wiki/de/TechDraw_2LineCenterLine.html
@@ -58,7 +58,7 @@
 <p>Das Werkzeug <b>TechDraw 2LinienMittellinie</b> f&uuml;gt eine Mittellinie zwischen zwei Kanten hinzu.
 </p><p><span typeof="mw:File"><a href="../index.php?title=CL2LinesSample.png&amp;filetimestamp=20190713135936&amp;.html" class="mw-file-description"><img src="../File/CL2LinesSample.png" decoding="async" width="350" height="237" class="mw-file-element" data-file-width="371" data-file-height="251"></a></span>
 </p>
-<p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Zwischen 2 Kanten ausgerichtete Mittellinie</p>
+<p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Zwischen zwei Kanten ausgerichtete Mittellinie</p>
 <p><span id="Usage_create"></span>
 </p>
 <h2><span id="Anwendung.2C_Erstellen"></span><span class="mw-headline" id="Anwendung,_Erstellen">Anwendung, Erstellen</span></h2>
@@ -127,15 +127,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111195222
+Cached time: 20260111195318
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.082 seconds
-Real time usage: 0.313 seconds
+CPU time usage: 0.085 seconds
+Real time usage: 0.219 seconds
 Preprocessor visited node count: 316/1000000
-Post&#8208;expand include size: 27927/2097152 bytes
-Template argument size: 11163/2097152 bytes
+Post&#8208;expand include size: 27933/2097152 bytes
+Template argument size: 11166/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -143,18 +143,18 @@ Unstrip post&#8208;expand size: 1710/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   62.253      1 -total
- 37.39%   23.279      1 Template:TechDraw_Tools_navi/de
- 14.60%    9.087      2 Template:Docnav/de
- 13.93%    8.669      1 Template:GuiCommand/de
- 13.20%    8.216      2 Template:Navigation_menu_2
- 12.86%    8.007      1 Template:Caption
-  7.83%    4.872      1 Template:MenuCommand
-  7.73%    4.813      2 Template:Button
-  4.35%    2.708      1 Template:Userdocnavi/de
+100.00%   25.056      1 -total
+ 27.05%    6.778      1 Template:TechDraw_Tools_navi/de
+ 25.00%    6.263      1 Template:GuiCommand/de
+ 15.73%    3.942      2 Template:Navigation_menu_2
+ 13.61%    3.410      2 Template:Docnav/de
+ 12.40%    3.107      1 Template:Userdocnavi/de
+  8.66%    2.169      1 Template:Caption
+  5.89%    1.475      2 Template:Button
+  4.59%    1.151      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:177750-0!canonical and timestamp 20260111195222 and revision id 1735912. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:177750-0!canonical and timestamp 20260111195317 and revision id 1735920. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
