Updated page TechDraw Workbench/de

--- a/wiki/de/TechDraw_Workbench.html
+++ b/wiki/de/TechDraw_Workbench.html
@@ -166,9 +166,7 @@
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCreateLengthArc.svg&amp;filetimestamp=20240706145221&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCreateLengthArc.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExtensionCreateLengthArc.html" title="TechDraw ExtensionCreateLengthArc/de">Bogenma&szlig;</a>: Erstellt ein Ma&szlig; f&uuml;r die (gestreckte) L&auml;nge eines Bogens.</li></ul></dd></dl>
 <ul><li><span id="TechDraw_ExtensionInsertPrefixGroup"><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionInsertDiameter.svg&amp;filetimestamp=20240706152033&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionInsertDiameter.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExtensionInsertDiameter.html" title="TechDraw ExtensionInsertDiameter/de">'&#8960;'-Symbol einf&uuml;gen</a>: F&uuml;gt ein Durchmessersymbol (&#8960;) am Anfang des Ma&szlig;textes ein.</span></li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionInsertSquare.svg&amp;filetimestamp=20240706152131&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionInsertSquare.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExtensionInsertSquare.html" title="TechDraw ExtensionInsertSquare/de">'&#9633;'-Symbol einf&uuml;gen</a>: F&uuml;gt ein Vierkantsymbol (&#9633;) am Anfang des Ma&szlig;textes ein.</li></ul>
-<div class="mw-translate-fuzzy">
-<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionInsertRepetition.svg&amp;filetimestamp=20240707210847&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionInsertRepetition.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../TechDraw_ExtensionInsertRepetition.html" title="TechDraw ExtensionInsertRepetition">Anzahl-Pr&auml;fix ('n&times;') einf&uuml;gen</a>: F&uuml;gt einen Multiplikator am Anfang des Ma&szlig;textes ein, der angibt, wie oft das zu diesem  Ma&szlig; geh&ouml;rende Formelement in der Ansicht vorkommt. <span style="font-size:small;"><a href="../de/Release_notes_1.0.html" title="Release notes 1.0/de">eingef&uuml;hrt in 1.0</a></span></li></ul></dd></dl>
-</div>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionInsertRepetition.svg&amp;filetimestamp=20240707210847&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionInsertRepetition.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExtensionInsertRepetition.html" title="TechDraw ExtensionInsertRepetition/de">Anzahl-Pr&auml;fix 'n&times;' einf&uuml;gen</a>: F&uuml;gt einen Multiplikator am Anfang des Ma&szlig;textes ein, der angibt, wie oft das zu diesem Ma&szlig; geh&ouml;rende Geometrieelement in der Ansicht vorkommt. <span style="font-size:small;"><a href="../de/Release_notes_1.0.html" title="Release notes 1.0/de">eingef&uuml;hrt in 1.0</a></span></li></ul>
 <div class="mw-translate-fuzzy">
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionRemovePrefixChar.svg&amp;filetimestamp=20240707203715&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionRemovePrefixChar.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExtensionRemovePrefixChar.html" title="TechDraw ExtensionRemovePrefixChar/de">Pr&auml;fixsymbol entfernen</a>: Entfernt alle Symbole am Anfang des Ma&szlig;textes.</li></ul></dd></dl>
 </div>
@@ -315,13 +313,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111194654
+Cached time: 20260111195336
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.249 seconds
-Real time usage: 0.681 seconds
-Preprocessor visited node count: 873/1000000
+CPU time usage: 0.295 seconds
+Real time usage: 0.399 seconds
+Preprocessor visited node count: 872/1000000
 Post&#8208;expand include size: 27425/2097152 bytes
 Template argument size: 10242/2097152 bytes
 Highest expansion depth: 5/100
@@ -331,18 +329,18 @@ Unstrip post&#8208;expand size: 4458/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   56.715      1 -total
- 30.59%   17.350      1 Template:TechDraw_Tools_navi/de
- 26.03%   14.762      5 Template:VersionPlus/de
-  8.08%    4.580     25 Template:Version/de
-  7.72%    4.376      2 Template:Docnav/de
-  5.57%    3.160      2 Template:Navigation_menu_2
-  4.97%    2.816      1 Template:TOCright
-  4.35%    2.465      1 Template:KEY
-  2.32%    1.317      1 Template:Userdocnavi/de
+100.00%   28.934      1 -total
+ 33.29%    9.632      1 Template:TechDraw_Tools_navi/de
+ 22.10%    6.396      2 Template:Navigation_menu_2
+ 17.20%    4.977      1 Template:Userdocnavi/de
+ 11.12%    3.217     25 Template:Version/de
+ 10.66%    3.083      5 Template:VersionPlus/de
+  9.49%    2.745      2 Template:Docnav/de
+  4.40%    1.272      1 Template:TOCright
+  4.11%    1.189      1 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:83899-0!canonical and timestamp 20260111194653 and revision id 1735891. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:83899-0!canonical and timestamp 20260111195335 and revision id 1735922. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
