--- a/wiki/cs/Mouse_navigation.html
+++ b/wiki/cs/Mouse_navigation.html
@@ -144,10 +144,8 @@
 </td></tr>
 <tr style="vertical-align:top; background:#efefef;">
 <td>Stiskn&#283;te lev&eacute; tla&#269;&iacute;tko my&scaron;i nad objektem, kter&yacute; chcete vybrat.
-<div lang="en" dir="ltr" class="mw-content-ltr">
-</div></td>
-<td>Use the mouse wheel to zoom in and out.
-
+</td>
+<td>Pomoc&iacute; kole&#269;ka my&scaron;i m&#367;&#382;ete p&#345;ibli&#382;ovat a oddalovat zobrazen&iacute;.
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>Clicking the middle mouse button re-centers the view on the location of the pointer.
 </p>
@@ -1198,15 +1196,15 @@ In <a href="../Sketcher_Workbench.html" title="Sketcher Workbench">Sketcher</a> 
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111195304
+Cached time: 20260111195349
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.310 seconds
-Real time usage: 0.433 seconds
-Preprocessor visited node count: 1679/1000000
-Post&#8208;expand include size: 78940/2097152 bytes
-Template argument size: 28741/2097152 bytes
+CPU time usage: 0.377 seconds
+Real time usage: 0.612 seconds
+Preprocessor visited node count: 1678/1000000
+Post&#8208;expand include size: 78913/2097152 bytes
+Template argument size: 28714/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -1214,19 +1212,19 @@ Unstrip post&#8208;expand size: 3888/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   72.764      1 -total
- 10.63%    7.734      8 Template:ASCII
- 10.05%    7.312      1 Template:TOCright
-  7.46%    5.428      1 Template:Userdocnavi/cs
-  5.49%    3.994      1 Template:CAD_Navigation
-  5.37%    3.911     78 Template:KEY
-  5.19%    3.775      1 Template:OpenSCAD_Navigation
-  4.81%    3.503      1 Template:Inventor_Navigation/cs
-  4.67%    3.397      1 Template:OpenCascade_Navigation
-  4.63%    3.366      1 Template:Gesture_Navigation
+100.00%  113.568      1 -total
+ 10.42%   11.832      8 Template:ASCII
+  7.22%    8.202      1 Template:Gesture_Navigation
+  7.08%    8.046      1 Template:OpenSCAD_Navigation
+  6.88%    7.817      1 Template:Userdocnavi/cs
+  5.89%    6.684      1 Template:SolidWorks_Navigation
+  5.67%    6.441      1 Template:CAD_Navigation
+  5.03%    5.714      1 Template:Inventor_Navigation/cs
+  4.91%    5.578      1 Template:Touchpad_Navigation
+  4.65%    5.278      2 Template:OpenInventor_Navigation
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111195304 and revision id 1735918. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111195348 and revision id 1735924. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
