--- a/wiki/cs/Mouse_navigation.html
+++ b/wiki/cs/Mouse_navigation.html
@@ -148,10 +148,8 @@
 <td>Pomoc&iacute; kole&#269;ka my&scaron;i m&#367;&#382;ete p&#345;ibli&#382;ovat a oddalovat zobrazen&iacute;.
 <p>Kliknut&iacute;m na prost&#345;edn&iacute; tla&#269;&iacute;tko my&scaron;i se zobrazen&iacute; znovu vycentruje na pozici ukazatele.
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-</div></td>
-<td>Hold the middle mouse button, then press and hold the left mouse button, then move the pointer.
-
+</td>
+<td>Podr&#382;te prost&#345;edn&iacute; tla&#269;&iacute;tko my&scaron;i, pot&eacute; stiskn&#283;te a podr&#382;te lev&eacute; tla&#269;&iacute;tko my&scaron;i a p&#345;esu&#328;te ukazatel.
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>If the buttons are released before you stop the mouse motion, the view continues spinning, if this is enabled.
 </p>
@@ -1194,15 +1192,15 @@ In <a href="../Sketcher_Workbench.html" title="Sketcher Workbench">Sketcher</a> 
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111195417
+Cached time: 20260111195448
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.336 seconds
-Real time usage: 0.544 seconds
-Preprocessor visited node count: 1677/1000000
-Post&#8208;expand include size: 78868/2097152 bytes
-Template argument size: 28669/2097152 bytes
+CPU time usage: 0.413 seconds
+Real time usage: 1.009 seconds
+Preprocessor visited node count: 1676/1000000
+Post&#8208;expand include size: 78829/2097152 bytes
+Template argument size: 28630/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -1210,19 +1208,19 @@ Unstrip post&#8208;expand size: 3888/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   83.879      1 -total
- 11.12%    9.324      8 Template:ASCII
-  9.48%    7.952      2 Template:OpenInventor_Navigation
-  7.78%    6.529      1 Template:OpenSCAD_Navigation
-  7.71%    6.468      2 Template:Docnav
-  6.43%    5.393      1 Template:Userdocnavi/cs
-  5.26%    4.416     78 Template:KEY
-  4.65%    3.899      1 Template:SolidWorks_Navigation
-  4.24%    3.554      1 Template:Revit_Navigation
-  3.93%    3.300      1 Template:SiemensNX_Navigation
+100.00%  211.295      1 -total
+  8.19%   17.304      1 Template:Userdocnavi/cs
+  8.11%   17.141      1 Template:CAD_Navigation
+  7.77%   16.426      8 Template:ASCII
+  7.02%   14.837      1 Template:Blender_Navigation
+  6.96%   14.710      1 Template:SiemensNX_Navigation
+  5.37%   11.350      1 Template:OpenSCAD_Navigation
+  4.67%    9.871      1 Template:Gesture_Navigation
+  4.43%    9.355      1 Template:Revit_Navigation
+  4.30%    9.078      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111195417 and revision id 1735926. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111195447 and revision id 1735930. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
