--- a/wiki/cs/Mouse_navigation.html
+++ b/wiki/cs/Mouse_navigation.html
@@ -150,10 +150,8 @@
 </p>
 </td>
 <td>Podr&#382;te prost&#345;edn&iacute; tla&#269;&iacute;tko my&scaron;i, pot&eacute; stiskn&#283;te a podr&#382;te lev&eacute; tla&#269;&iacute;tko my&scaron;i a p&#345;esu&#328;te ukazatel.
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>If the buttons are released before you stop the mouse motion, the view continues spinning, if this is enabled.
+<p>Pokud tla&#269;&iacute;tka uvoln&iacute;te d&#345;&iacute;ve, ne&#382; zastav&iacute;te pohyb my&scaron;i, pohled se bude d&aacute;le ot&aacute;&#269;et, pokud je tato funkce povolena.
 </p>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 </div></td>
 <td>Hold the middle mouse button, then press and hold the right mouse button, then move the pointer.
@@ -1192,15 +1190,15 @@ In <a href="../Sketcher_Workbench.html" title="Sketcher Workbench">Sketcher</a> 
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111195448
+Cached time: 20260111195516
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.413 seconds
-Real time usage: 1.009 seconds
-Preprocessor visited node count: 1676/1000000
-Post&#8208;expand include size: 78829/2097152 bytes
-Template argument size: 28630/2097152 bytes
+CPU time usage: 0.370 seconds
+Real time usage: 0.921 seconds
+Preprocessor visited node count: 1675/1000000
+Post&#8208;expand include size: 78789/2097152 bytes
+Template argument size: 28590/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -1208,19 +1206,19 @@ Unstrip post&#8208;expand size: 3888/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  211.295      1 -total
-  8.19%   17.304      1 Template:Userdocnavi/cs
-  8.11%   17.141      1 Template:CAD_Navigation
-  7.77%   16.426      8 Template:ASCII
-  7.02%   14.837      1 Template:Blender_Navigation
-  6.96%   14.710      1 Template:SiemensNX_Navigation
-  5.37%   11.350      1 Template:OpenSCAD_Navigation
-  4.67%    9.871      1 Template:Gesture_Navigation
-  4.43%    9.355      1 Template:Revit_Navigation
-  4.30%    9.078      2 Template:Docnav
+100.00%  166.275      1 -total
+ 14.85%   24.684      8 Template:ASCII
+ 10.80%   17.954      1 Template:Blender_Navigation
+  7.70%   12.795      1 Template:Userdocnavi/cs
+  6.39%   10.622     78 Template:KEY
+  4.82%    8.015      2 Template:Docnav
+  4.70%    7.821      1 Template:CAD_Navigation
+  4.45%    7.397      1 Template:OpenSCAD_Navigation
+  4.27%    7.094      1 Template:Revit_Navigation
+  4.06%    6.748      1 Template:Gesture_Navigation
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111195447 and revision id 1735930. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111195515 and revision id 1735932. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
