--- a/wiki/de/TechDraw_Workbench.html
+++ b/wiki/de/TechDraw_Workbench.html
@@ -168,9 +168,8 @@
 <ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionInsertSquare.svg&amp;filetimestamp=20240706152131&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionInsertSquare.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExtensionInsertSquare.html" title="TechDraw ExtensionInsertSquare/de">'&#9633;'-Symbol einf&uuml;gen</a>: F&uuml;gt ein Vierkantsymbol (&#9633;) am Anfang des Ma&szlig;textes ein.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionInsertRepetition.svg&amp;filetimestamp=20240707210847&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionInsertRepetition.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExtensionInsertRepetition.html" title="TechDraw ExtensionInsertRepetition/de">Anzahl-Pr&auml;fix 'n&times;' einf&uuml;gen</a>: F&uuml;gt einen Multiplikator am Anfang des Ma&szlig;textes ein, der angibt, wie oft das zu diesem Ma&szlig; geh&ouml;rende Geometrieelement in der Ansicht vorkommt. <span style="font-size:small;"><a href="../de/Release_notes_1.0.html" title="Release notes 1.0/de">eingef&uuml;hrt in 1.0</a></span></li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionRemovePrefixChar.svg&amp;filetimestamp=20240707203715&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionRemovePrefixChar.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExtensionRemovePrefixChar.html" title="TechDraw ExtensionRemovePrefixChar/de">Pr&auml;fixsymbol entfernen</a>: Entfernt alle Symbole am Anfang des Ma&szlig;textes.</li></ul>
-<div class="mw-translate-fuzzy">
-<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionIncreaseDecimal.svg&amp;filetimestamp=20241126181950&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionIncreaseDecimal.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExtensionIncreaseDecimal.html" title="TechDraw ExtensionIncreaseDecimal/de">Dezimalstellenanzahl erh&ouml;hen</a>: Erh&ouml;ht die Anzahl der Dezimalstellen der Ma&szlig;zahl.</li></ul></dd></dl>
-</div>
+<ul><li><span id="TechDraw_ExtensionIncreaseDecreaseGroup"><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionIncreaseDecimal.svg&amp;filetimestamp=20241126181950&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionIncreaseDecimal.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExtensionIncreaseDecimal.html" title="TechDraw ExtensionIncreaseDecimal/de">Increase Decimal Places</a>: increases the number of decimal places of the dimension text.</span></li></ul>
+<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionIncreaseDecimal.svg&amp;filetimestamp=20241126181950&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionIncreaseDecimal.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExtensionIncreaseDecimal.html" title="TechDraw ExtensionIncreaseDecimal/de">Dezimalstellenanzahl erh&ouml;hen</a>: Erh&ouml;ht die Anzahl der Nachkommastellen der Ma&szlig;zahl.</li></ul></dd></dl>
 <div class="mw-translate-fuzzy">
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionDecreaseDecimal.svg&amp;filetimestamp=20241126181948&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionDecreaseDecimal.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExtensionDecreaseDecimal.html" title="TechDraw ExtensionDecreaseDecimal/de">Dezimalstellenanzahl verringern</a>: verringert die Anzahl der Dezimalstellen der Ma&szlig;zahl.</li></ul></dd></dl>
 </div>
@@ -311,13 +310,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111195424
+Cached time: 20260111195533
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.345 seconds
-Real time usage: 1.089 seconds
-Preprocessor visited node count: 871/1000000
+CPU time usage: 0.336 seconds
+Real time usage: 0.745 seconds
+Preprocessor visited node count: 875/1000000
 Post&#8208;expand include size: 27425/2097152 bytes
 Template argument size: 10242/2097152 bytes
 Highest expansion depth: 5/100
@@ -327,18 +326,18 @@ Unstrip post&#8208;expand size: 4458/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   78.106      1 -total
- 24.47%   19.113      1 Template:TechDraw_Tools_navi/de
- 19.23%   15.018      2 Template:Docnav/de
- 13.38%   10.448      2 Template:Navigation_menu_2
- 13.36%   10.439     25 Template:Version/de
- 10.39%    8.118      1 Template:TOCright
-  8.36%    6.528      5 Template:VersionPlus/de
-  7.15%    5.583      1 Template:KEY
-  5.01%    3.917      1 Template:Userdocnavi/de
+100.00%   33.392      1 -total
+ 23.70%    7.915      1 Template:TechDraw_Tools_navi/de
+ 21.42%    7.152      2 Template:Docnav/de
+ 16.99%    5.672      5 Template:VersionPlus/de
+ 12.19%    4.071      2 Template:Navigation_menu_2
+ 10.09%    3.369     25 Template:Version/de
+  9.12%    3.047      1 Template:KEY
+  6.62%    2.212      1 Template:Userdocnavi/de
+  5.77%    1.927      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:83899-0!canonical and timestamp 20260111195423 and revision id 1735928. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:83899-0!canonical and timestamp 20260111195532 and revision id 1735934. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
